lib/dcimgui/dcimgui.h


typedef struct ImVec2_t ImVec2;
typedef struct ImVec4_t ImVec4;
typedef unsigned int ImGuiID;      
typedef unsigned int ImU32;        
typedef struct ImGuiTableSortSpecs_t ImGuiTableSortSpecs;                      
typedef struct ImGuiViewport_t ImGuiViewport;                                  
typedef struct ImGuiWindowClass_t ImGuiWindowClass;                            
typedef int ImGuiCond;            
typedef int ImGuiTableBgTarget;   
typedef int ImGuiDockNodeFlags;     
typedef int ImGuiPopupFlags;        
typedef int ImGuiTabBarFlags;       
typedef int ImGuiTabItemFlags;      
typedef int ImGuiTableFlags;        
typedef int ImGuiTableColumnFlags;  
typedef int ImGuiTableRowFlags;     
typedef int ImGuiWindowFlags;       
CIMGUI_API void ImGui_PlotLinesCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count);      
CIMGUI_API void ImGui_PlotLinesCallbackEx(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
CIMGUI_API void ImGui_PlotHistogramCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count);  
CIMGUI_API void ImGui_PlotHistogramCallbackEx(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
CIMGUI_API void ImGui_EndMenuBar(void);                                           
CIMGUI_API bool ImGui_BeginMainMenuBar(void);                                     
CIMGUI_API void ImGui_EndMainMenuBar(void);                                       
CIMGUI_API bool ImGui_BeginMenu(const char* label);                               
CIMGUI_API bool ImGui_BeginMenuEx(const char* label, bool enabled );  
CIMGUI_API void ImGui_EndMenu(void);                                              
CIMGUI_API bool ImGui_MenuItem(const char* label);                                
CIMGUI_API bool ImGui_MenuItemEx(const char* label, const char* shortcut , bool selected , bool enabled ); 
CIMGUI_API bool ImGui_MenuItemBoolPtr(const char* label, const char* shortcut, bool* p_selected, bool enabled ); 
CIMGUI_API bool ImGui_BeginTooltip(void);                                        
CIMGUI_API void ImGui_EndTooltip(void);                                          
CIMGUI_API void ImGui_SetTooltipUnformatted(const char* text);                   
CIMGUI_API bool ImGui_BeginItemTooltip(void);                                        
CIMGUI_API void ImGui_SetItemTooltipUnformatted(const char* text);                   
CIMGUI_API bool ImGui_BeginPopup(const char* str_id, ImGuiWindowFlags flags );                                
CIMGUI_API bool ImGui_BeginPopupModal(const char* name, bool* p_open , ImGuiWindowFlags flags );  
CIMGUI_API void ImGui_EndPopup(void);                                                                                  
CIMGUI_API void ImGui_OpenPopup(const char* str_id, ImGuiPopupFlags popup_flags );                          
CIMGUI_API void ImGui_OpenPopupID(ImGuiID id, ImGuiPopupFlags popup_flags );                                
CIMGUI_API void ImGui_OpenPopupOnItemClick(const char* str_id , ImGuiPopupFlags popup_flags );  
CIMGUI_API void ImGui_CloseCurrentPopup(void);                                                                       
CIMGUI_API bool ImGui_BeginPopupContextItem(void);                                                                        
CIMGUI_API bool ImGui_BeginPopupContextItemEx(const char* str_id , ImGuiPopupFlags popup_flags );    
CIMGUI_API bool ImGui_BeginPopupContextWindow(void);                                                                      
CIMGUI_API bool ImGui_BeginPopupContextWindowEx(const char* str_id , ImGuiPopupFlags popup_flags );  
CIMGUI_API bool ImGui_BeginPopupContextVoid(void);                                                                        
CIMGUI_API bool ImGui_BeginPopupContextVoidEx(const char* str_id , ImGuiPopupFlags popup_flags );    
CIMGUI_API bool ImGui_IsPopupOpen(const char* str_id, ImGuiPopupFlags flags );  
CIMGUI_API bool ImGui_BeginTable(const char* str_id, int columns, ImGuiTableFlags flags );               
CIMGUI_API bool ImGui_BeginTableEx(const char* str_id, int columns, ImGuiTableFlags flags , ImVec2 outer_size , float inner_width );
CIMGUI_API void ImGui_EndTable(void);                                                                             
CIMGUI_API void ImGui_TableNextRow(void);                                                                         
CIMGUI_API void ImGui_TableNextRowEx(ImGuiTableRowFlags row_flags , float min_row_height );  
CIMGUI_API bool ImGui_TableNextColumn(void);                                                                      
CIMGUI_API bool ImGui_TableSetColumnIndex(int column_n);                                                          
CIMGUI_API void ImGui_TableSetupColumn(const char* label, ImGuiTableColumnFlags flags );  
CIMGUI_API void ImGui_TableSetupColumnEx(const char* label, ImGuiTableColumnFlags flags , float init_width_or_weight , ImGuiID user_id );
CIMGUI_API void ImGui_TableSetupScrollFreeze(int cols, int rows);                                  
CIMGUI_API void ImGui_TableHeader(const char* label);                                              
CIMGUI_API void ImGui_TableHeadersRow(void);                                                       
CIMGUI_API void ImGui_TableAngledHeadersRow(void);                                                 
CIMGUI_API ImGuiTableSortSpecs*  ImGui_TableGetSortSpecs(void);                       
CIMGUI_API int                   ImGui_TableGetColumnCount(void);                     
CIMGUI_API int                   ImGui_TableGetColumnIndex(void);                     
CIMGUI_API int                   ImGui_TableGetRowIndex(void);                        
CIMGUI_API const char*           ImGui_TableGetColumnName(int column_n );   
CIMGUI_API ImGuiTableColumnFlags ImGui_TableGetColumnFlags(int column_n );  
CIMGUI_API void                  ImGui_TableSetColumnEnabled(int column_n, bool v);   
CIMGUI_API int                   ImGui_TableGetHoveredColumn(void);                   
CIMGUI_API void                  ImGui_TableSetBgColor(ImGuiTableBgTarget target, ImU32 color, int column_n ); 
CIMGUI_API void  ImGui_Columns(void);                                      
CIMGUI_API void  ImGui_ColumnsEx(int count , const char* id , bool borders );
CIMGUI_API void  ImGui_NextColumn(void);                                   
CIMGUI_API int   ImGui_GetColumnIndex(void);                               
CIMGUI_API float ImGui_GetColumnWidth(int column_index );        
CIMGUI_API void  ImGui_SetColumnWidth(int column_index, float width);      
CIMGUI_API float ImGui_GetColumnOffset(int column_index );       
CIMGUI_API void  ImGui_SetColumnOffset(int column_index, float offset_x);  
CIMGUI_API int   ImGui_GetColumnsCount(void);
CIMGUI_API bool ImGui_BeginTabBar(const char* str_id, ImGuiTabBarFlags flags );    
CIMGUI_API void ImGui_EndTabBar(void);                                                      
CIMGUI_API bool ImGui_BeginTabItem(const char* label, bool* p_open , ImGuiTabItemFlags flags ); 
CIMGUI_API void ImGui_EndTabItem(void);                                                     
CIMGUI_API bool ImGui_TabItemButton(const char* label, ImGuiTabItemFlags flags );  
CIMGUI_API void ImGui_SetTabItemClosed(const char* tab_or_docked_window_label);             
CIMGUI_API ImGuiID ImGui_DockSpace(ImGuiID dockspace_id);                                 
CIMGUI_API ImGuiID ImGui_DockSpaceEx(ImGuiID dockspace_id, ImVec2 size , ImGuiDockNodeFlags flags , const ImGuiWindowClass* window_class );
CIMGUI_API ImGuiID ImGui_DockSpaceOverViewport(void);                                     
CIMGUI_API ImGuiID ImGui_DockSpaceOverViewportEx(ImGuiID dockspace_id , const ImGuiViewport* viewport , ImGuiDockNodeFlags flags , const ImGuiWindowClass* window_class );
CIMGUI_API void    ImGui_SetNextWindowDockID(ImGuiID dock_id, ImGuiCond cond );  
CIMGUI_API void ImGuiPlatformIO_SetPlatform_GetWindowWorkAreaInsets(void (*getWindowWorkAreaInsetsFunc)(ImGuiViewport* vp, ImVec4* result));  
CIMGUI_API void ImGuiPlatformIO_SetPlatform_GetWindowFramebufferScale(void (*getWindowFramebufferScaleFunc)(ImGuiViewport* vp, ImVec2* result));  
CIMGUI_API void ImGuiPlatformIO_SetPlatform_GetWindowPos(void (*getWindowPosFunc)(ImGuiViewport* vp, ImVec2* result));    
CIMGUI_API void ImGuiPlatformIO_SetPlatform_GetWindowSize(void (*getWindowSizeFunc)(ImGuiViewport* vp, ImVec2* result));  