src/imguics/DCImGui.cs

    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_EndMenuBar();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_BeginMainMenuBar();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_EndMainMenuBar();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_BeginMenuEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, [MarshalAs(UnmanagedType.I1)] bool enabled);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_BeginMenu([MarshalAs(UnmanagedType.LPUTF8Str)] string label);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_EndMenu();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_MenuItemEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, [MarshalAs(UnmanagedType.LPUTF8Str)] string shortcut, [MarshalAs(UnmanagedType.I1)] bool selected, [MarshalAs(UnmanagedType.I1)] bool enabled);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_MenuItem([MarshalAs(UnmanagedType.LPUTF8Str)] string label);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_MenuItemBoolPtr([MarshalAs(UnmanagedType.LPUTF8Str)] string label, [MarshalAs(UnmanagedType.LPUTF8Str)] string shortcut, System.IntPtr p_selected, [MarshalAs(UnmanagedType.I1)] bool enabled);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_BeginTooltip();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_EndTooltip();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_SetTooltipUnformatted([MarshalAs(UnmanagedType.LPUTF8Str)] string text);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_BeginItemTooltip();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_SetItemTooltipUnformatted([MarshalAs(UnmanagedType.LPUTF8Str)] string text);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_BeginPopup([MarshalAs(UnmanagedType.LPUTF8Str)] string str_id, int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_BeginPopupModal([MarshalAs(UnmanagedType.LPUTF8Str)] string name, System.IntPtr p_open, int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_EndPopup();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_OpenPopup([MarshalAs(UnmanagedType.LPUTF8Str)] string str_id, int popup_flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_OpenPopupID(uint id, int popup_flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_OpenPopupOnItemClick([MarshalAs(UnmanagedType.LPUTF8Str)] string str_id, int popup_flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_CloseCurrentPopup();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_BeginPopupContextItemEx([MarshalAs(UnmanagedType.LPUTF8Str)] string str_id, int popup_flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_BeginPopupContextItem();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_BeginPopupContextWindowEx([MarshalAs(UnmanagedType.LPUTF8Str)] string str_id, int popup_flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_BeginPopupContextWindow();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_BeginPopupContextVoidEx([MarshalAs(UnmanagedType.LPUTF8Str)] string str_id, int popup_flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_BeginPopupContextVoid();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_IsPopupOpen([MarshalAs(UnmanagedType.LPUTF8Str)] string str_id, int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_BeginTableEx([MarshalAs(UnmanagedType.LPUTF8Str)] string str_id, int columns, int flags, ImVec2 outer_size, float inner_width);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_BeginTable([MarshalAs(UnmanagedType.LPUTF8Str)] string str_id, int columns, int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_EndTable();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_TableNextRowEx(int row_flags, float min_row_height);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_TableNextRow();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_TableNextColumn();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_TableSetColumnIndex(int column_n);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_TableSetupColumnEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, int flags, float init_width_or_weight, uint user_id);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_TableSetupColumn([MarshalAs(UnmanagedType.LPUTF8Str)] string label, int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_TableSetupScrollFreeze(int cols, int rows);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_TableHeader([MarshalAs(UnmanagedType.LPUTF8Str)] string label);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_TableHeadersRow();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_TableAngledHeadersRow();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern System.IntPtr ImGui_TableGetSortSpecs();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern int ImGui_TableGetColumnCount();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern int ImGui_TableGetColumnIndex();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern int ImGui_TableGetRowIndex();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern System.IntPtr ImGui_TableGetColumnName(int column_n);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern int ImGui_TableGetColumnFlags(int column_n);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_TableSetColumnEnabled(int column_n, [MarshalAs(UnmanagedType.I1)] bool v);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern int ImGui_TableGetHoveredColumn();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_TableSetBgColor(int target, uint color, int column_n);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_ColumnsEx(int count, [MarshalAs(UnmanagedType.LPUTF8Str)] string id, [MarshalAs(UnmanagedType.I1)] bool borders);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_Columns();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_NextColumn();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern int ImGui_GetColumnIndex();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern float ImGui_GetColumnWidth(int column_index);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_SetColumnWidth(int column_index, float width);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern float ImGui_GetColumnOffset(int column_index);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_SetColumnOffset(int column_index, float offset_x);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern int ImGui_GetColumnsCount();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_BeginTabBar([MarshalAs(UnmanagedType.LPUTF8Str)] string str_id, int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_EndTabBar();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_BeginTabItem([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr p_open, int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_EndTabItem();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_TabItemButton([MarshalAs(UnmanagedType.LPUTF8Str)] string label, int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_SetTabItemClosed([MarshalAs(UnmanagedType.LPUTF8Str)] string tab_or_docked_window_label);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern uint ImGui_DockSpaceEx(uint dockspace_id, ImVec2 size, int flags, System.IntPtr window_class);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern uint ImGui_DockSpace(uint dockspace_id);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern uint ImGui_DockSpaceOverViewportEx(uint dockspace_id, System.IntPtr viewport, int flags, System.IntPtr window_class);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern uint ImGui_DockSpaceOverViewport();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_SetNextWindowDockID(uint dock_id, int cond);
